# BoltSearch

./: CMakeLists.txt  README.md
data/: record.csv
include/: LoadCsv.hpp  Record.hpp  Search.hpp
src/: Record.cpp  main.cpp  search.cpp
